ex-1.07/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-app-srv
spec:
  type: ClusterIP
  selector:
    app: main-app
  ports:
    - port: 21
      protocol: TCP
      targetPort: 21
