ex-1.07/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-to-logs
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: main-app-srv
          servicePort: 21
